2005-07-14  Carl Worth  <cworth@cworth.org>

	* test/cairo-test.c: (cairo_test_real): Fix comment describing
	test result. It's not enough that all tested backends are
	successful. We also require that at least one backend is actually
	tested.

2005-07-14  Carl Worth  <cworth@cworth.org>

	* test/cairo-test.c: (cairo_test_for_target), (cairo_test_real):
	* test/cairo-test.h: Don't consider a test to fail if it can't
	create a surface at all (eg. no X server is available). Instead
	mark this backend as untested and only consider the overall test a
	success if all tested backend are successful.

2005-07-14  Carl Worth  <cworth@cworth.org>

	* src/cairo-ps-surface.c: (pattern_is_translucent): Add missing
	(putatively unreachable) return value.

2005-07-14  Carl Worth  <cworth@cworth.org>

	* src/cairo-image-surface.c:
	(_cairo_image_surface_set_clip_region): Remove the copying of the
	region. This was a workaround for a missing copy bug in libpixman
	that has since been fixed. So now it was just a memory leak.

2005-07-14  Carl Worth  <cworth@cworth.org>

	* src/cairo-png.c (read_png): Patch memory leak of png_info
	object.

2005-07-14  Carl Worth  <cworth@cworth.org>
	
	* test/.cvsignore:
	* test/Makefile.am:
	* test/create-for-png-ref.png:
	* test/create-for-png.c:
	* test/create-from-png.c: (draw): Rename create-for-png test to
	create-from-png to match the naming of the
	cairo_image_surface_create_from_png function.

2005-07-14  Carl Worth  <cworth@cworth.org>

	* test/cairo-test.c: (cleanup_xcb), (cleanup_xlib),
	(cairo_test_for_target), (cairo_test_real): Patch a few memory
	leaks.

2005-07-13  Kristian Høgsberg  <krh@redhat.com>

	* src/cairo-meta-surface.c: (_cairo_meta_surface_replay): Use
	the _cairo_surface_*() functions when replaying.
	
	* src/cairo-ps-surface.c: Fold the "locate fallbacks" pass into
	the postscript output pass, and add a simple, first implementation
	of image fallbacks.

2005-07-13  Carl Worth  <cworth@cworth.org>

	* src/cairoint.h: